improving log output, code cleaning

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "tweetsFetchSettings": {
-        "default": "test",
+        "default": "live",
         "list": {
             "test": {
                 "listen": "map decarbnow abteil org",
