--- a/config.template.json
+++ b/config.template.json
@@ -1,6 +1,16 @@
 {
     "authToken": "xxx",
     "secretKey": "xxx",
+    "mastodon": {
+        "instance_url": "https://mastodon.instance",
+        "client": {
+            "key": "xxx",
+            "secret": "xxx"
+        },
+        "access": {
+            "token": "xxx"
+        }
+    },
     "twitter": {
         "api": {
             "key": "xxx",
