--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 backcall==0.1.0
+blurhash==1.1.4
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
@@ -18,6 +19,7 @@ jupyter-client==6.1.3
 jupyter-core==4.6.3
 lxml==4.5.1
 MarkupSafe==1.1.1
+Mastodon.py==1.8.1
 oauthlib==3.1.0
 parso==0.7.0
 pexpect==4.8.0
@@ -28,6 +30,7 @@ Pygments==2.6.1
 pyquery==1.4.1
 PySocks==1.7.1
 python-dateutil==2.8.1
+python-magic==0.4.27
 pyzmq==19.0.1
 requests==2.23.0
 requests-oauthlib==1.3.0
